codepkg/objects/Variable_Data_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Variable Data Uploads</relationshipLabel>
        <relationshipName>Variable_Data_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Azure_file_url__c</fullName>
        <label>Azure file url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ColumnAData__c</fullName>
        <label>ColumnAData</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnA__c</fullName>
        <label>ColumnA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnB_Data__c</fullName>
        <label>ColumnB Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnB__c</fullName>
        <label>ColumnB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnC_Data__c</fullName>
        <label>ColumnC Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnC__c</fullName>
        <label>ColumnC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnD_Data__c</fullName>
        <label>ColumnD Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnD__c</fullName>
        <label>ColumnD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnE_Data__c</fullName>
        <label>ColumnE Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnE__c</fullName>
        <label>ColumnE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnF_Data__c</fullName>
        <label>ColumnF Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnF__c</fullName>
        <label>ColumnF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnG_Data__c</fullName>
        <label>ColumnG Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnG__c</fullName>
        <label>ColumnG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnH_Data__c</fullName>
        <label>ColumnH Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnH__c</fullName>
        <label>ColumnH</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnI_Data__c</fullName>
        <label>ColumnI Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnI__c</fullName>
        <label>ColumnI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnJ_Data__c</fullName>
        <label>ColumnJ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnJ__c</fullName>
        <label>ColumnJ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnK_Data__c</fullName>
        <label>ColumnK Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnK__c</fullName>
        <label>ColumnK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnL_Data__c</fullName>
        <label>ColumnL Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnL__c</fullName>
        <label>ColumnL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnM_Data__c</fullName>
        <label>ColumnM Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnM__c</fullName>
        <label>ColumnM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnN_Data__c</fullName>
        <label>ColumnN Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnN__c</fullName>
        <label>ColumnN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnO_Data__c</fullName>
        <label>ColumnO Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnO__c</fullName>
        <label>ColumnO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnP_Data__c</fullName>
        <label>ColumnP Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnP__c</fullName>
        <label>ColumnP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnQ_Data__c</fullName>
        <label>ColumnQ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnQ__c</fullName>
        <label>ColumnQ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnR_Data__c</fullName>
        <label>ColumnR Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnR__c</fullName>
        <label>ColumnR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnS_Data__c</fullName>
        <label>ColumnS Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnS__c</fullName>
        <label>ColumnS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnT_Data__c</fullName>
        <label>ColumnT Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnT__c</fullName>
        <label>ColumnT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnU_Data__c</fullName>
        <label>ColumnU Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnU__c</fullName>
        <label>ColumnU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnV_Data__c</fullName>
        <label>ColumnV Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnV__c</fullName>
        <label>ColumnV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnW__c</fullName>
        <label>ColumnW</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnX_Data__c</fullName>
        <label>ColumnX Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnX__c</fullName>
        <label>ColumnX</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnY_Data__c</fullName>
        <label>ColumnY Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnY__c</fullName>
        <label>ColumnY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnZ_Data__c</fullName>
        <label>ColumnZ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columnw_Data__c</fullName>
        <label>Columnw Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columnz__c</fullName>
        <label>Columnz</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOROA00TAG_TYPE__c</fullName>
        <label>JOROA00TAG-TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMAPNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mainetti_Email__c</fullName>
        <label>Mainetti Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POCount_Before_insert__c</fullName>
        <label>POCount Before insert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PENDING</fullName>
                    <default>true</default>
                    <label>PENDING</label>
                </value>
                <value>
                    <fullName>PROCESSED</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable_Data_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variable Data Mapping</label>
        <referenceTo>Variable_Data_Mapping__c</referenceTo>
        <relationshipLabel>Variable Data Uploads</relationshipLabel>
        <relationshipName>Variable_Data_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Variable Data Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Version_No__c</columns>
        <columns>Mainetti_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Variable_Data_Mapping__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Version_No__c</columns>
        <columns>Mainetti_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Variable_Data_Mapping__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>IN PROGRESS</value>
        </filters>
        <label>In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Version_No__c</columns>
        <columns>Mainetti_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Variable_Data_Mapping__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>PENDING</value>
        </filters>
        <label>Pending</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Processed</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Version_No__c</columns>
        <columns>Mainetti_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Variable_Data_Mapping__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>PROCESSED</value>
        </filters>
        <label>Processed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Variable Data Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variable Data Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>